Refactor database setup to use local sqlite instance.
Deleted sqlboiler.toml and no longer using ORM for database access
