# app/model/model.go
@@ -18,29 +18,29 @@ package appmodel
 import "github.com/google/uuid"
 
 type Configuration struct {
-	Id              int64
-	TenantId        uuid.UUID
-	SiteId          string
-	ApiKey          string
-	RefreshInterval int32
-	RequestTimeout  int32
-	Enable          bool
-	Active          bool
-	UserId          string
+	Id              int64     `json:"id" db:"id"`
+	TenantId        uuid.UUID `json:"tenant_id" db:"tenant_id"`
+	SiteId          string    `json:"site_id" db:"site_id"`
+	ApiKey          string    `json:"api_key" db:"api_key"`
+	RefreshInterval int32     `json:"refresh_interval" db:"refresh_interval"`
+	RequestTimeout  int32     `json:"request_timeout" db:"request_timeout"`
+	Enable          bool      `json:"enable" db:"enable"`
+	Active          bool      `json:"active" db:"active"`
+	UserId          string    `json:"user_id" db:"user_id"`
 }
 
 type Asset struct {
-	ID           int64
-	ProjectID    string
-	LocationName string
-	Lat          float64
-	Lon          float64
-	AssetID      int32
+	ID              int64   `json:"id" db:"id"`
+	ConfigurationId int64   `json:"configuration_id" db:"configuration_id"`
+	LocationName    string  `json:"location_name" db:"location_name"`
+	Lat             float64 `json:"lat" db:"lat"`
+	Lon             float64 `json:"lon" db:"lon"`
+	AssetID         int32   `json:"asset_id" db:"asset_id"`
 }
 
 type RootAsset struct {
-	ID      int64
-	Config  Configuration
-	AssetID int32
-	Gai     string
+	ID      int64         `json:"id" db:"id"`
+	Config  Configuration `json:"config" db:"-"`
+	AssetID int32         `json:"asset_id" db:"asset_id"`
+	Gai     string        `json:"gai" db:"gai"`
 }
