# openapi.yaml
@@ -132,13 +132,6 @@ paths:
           schema:
             type: string
             example: Template
-        - name: projectId
-          in: query
-          description: Define the project the dashboard should be
-          required: true
-          schema:
-            type: string
-            example: "99"
       responses:
         "200":
           description: Successfully returned dashboard template
